--- a/index.html
+++ b/index.html
@@ -87,7 +87,9 @@
                 </div>
                 <div class="row">
                     <div class="col-lg-12">
-                        <h3 class="final-hide">Next question...</h3>
+                        <h3 class="final-hide fh1">Next question...</h3>
+                        <p id="right"></p>
+                        <p id="wrong"></p>
                     </div>
                 </div>
             </div>
