--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
                 <div class="row">
                     <div class="col-lg-6">
                         <div class="card">
-                            <div class="card-body">
+                            <div class="card-body" id="answer1">
                                 <p class="card-text" id="answer1"></p>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-6 false">
                         <div class="card">
-                            <div class="card-body">
+                            <div class="card-body" id="answer2">
                                 <p class="card-text" id="answer2"></p>
                             </div>
                         </div>
@@ -49,14 +49,14 @@
                 <div class="row">
                     <div class="col-lg-6">
                         <div class="card">
-                            <div class="card-body">
+                            <div class="card-body"id="answer3">
                                 <p class="card-text" id="answer3"></p>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-6">
                         <div class="card">
-                            <div class="card-body">
+                            <div class="card-body" id="answer4">
                                 <p class="card-text"id="answer4"></p>
                             </div>
                         </div>
@@ -65,13 +65,12 @@
                     <div class="row">
                     <div class="col-lg-12">
                         <h3>Time left:
-                            <p id="time-left"></p>
+                            <span id="time-left">5</span>
                         </h3>
                     </div>
                 </div>
             </div>
     
-            <!-- times up screen -->
             <div class="container result">
                 <div class="row">
                     <div class="col-lg-12">
